src/test/ui/suggestions/suggest-remove-refs-1.stderr
error[E0277]: `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>` is not an iterator
  --> $DIR/suggest-remove-refs-1.rs:4:19
   |
LL |     for (i, n) in &v.iter().enumerate() {
   |                   -^^^^^^^^^^^^^^^^^^^^
   |                   |
   |                   `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>` is not an iterator
   |                   help: consider removing 1 leading `&`-references
   |
   = help: the trait `std::iter::Iterator` is not implemented for `&std::iter::Enumerate<std::slice::Iter<'_, {integer}>>`
   = note: required by `std::iter::IntoIterator::into_iter`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
